--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
   },
   "dependencies": {
     "@leenguyen/react-flip-clock-countdown": "^1.5.2",
+    "@splinetool/react-spline": "^2.2.6",
+    "@splinetool/runtime": "^1.3.8",
+    "framer-motion": "^11.2.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.1.0",
+    "react-intersection-observer": "^9.10.2",
     "react-router-dom": "^6.23.0"
   },
   "devDependencies": {
