--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^5.1.0",
     "react-intersection-observer": "^9.10.2",
+    "react-lottie": "^1.2.4",
     "react-router-dom": "^6.23.0"
   },
   "devDependencies": {
